# sqlx-oldapi

./: .cursorignore  ANY_DRIVER_INTEGRATION.md  ANY_DRIVER_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  FINAL_IMPLEMENTATION_SUMMARY.md  README.md  SNOWFLAKE_IMPLEMENTATION.md  docker-compose.fakesnow.yml  test.sh  test_all_features.sh
.github/workflows/: clippy.yml  publish.yml  sqlx.yml
examples/: snowflake_basic.rs
examples/mysql/todos/: Cargo.toml
examples/mysql/todos/src/: main.rs
examples/postgres/axum-social-with-tests/: Cargo.toml
examples/postgres/axum-social-with-tests/src/: lib.rs  main.rs  password.rs
examples/postgres/axum-social-with-tests/src/http/: mod.rs  user.rs
examples/postgres/axum-social-with-tests/src/http/post/: comment.rs
examples/postgres/axum-social-with-tests/tests/: comment.rs  common.rs  post.rs  user.rs
examples/snowflake_test/: Cargo.toml
scripts/: publish-dry-run.sh
sqlx-bench/: Cargo.toml  README.md
sqlx-bench/benches/: pg_pool.rs  sqlite_fetch_all.rs
sqlx-cli/: Cargo.toml
sqlx-cli/src/: lib.rs  metadata.rs  prepare.rs
sqlx-core/: Cargo.toml
sqlx-core/src/: arguments.rs  column.rs  connection.rs  error.rs  executor.rs  lib.rs  logger.rs  query.rs  query_as.rs  query_builder.rs  query_scalar.rs  statement.rs  transaction.rs
sqlx-core/src/any/: arguments.rs  column.rs  decode.rs  encode.rs  feature_combinations.rs  kind.rs  migrate.rs  mod.rs  options.rs  row.rs  statement.rs  transaction.rs  type.rs  type_info.rs  types.rs  value.rs
sqlx-core/src/any/connection/: establish.rs  executor.rs  mod.rs
sqlx-core/src/common/: mod.rs
sqlx-core/src/ext/: ustr.rs
sqlx-core/src/io/: buf_stream.rs  encode.rs  mod.rs
sqlx-core/src/migrate/: source.rs
sqlx-core/src/mssql/: arguments.rs  column.rs  mod.rs  row.rs  ssrp.rs  statement.rs  transaction.rs  value.rs
sqlx-core/src/mssql/connection/: establish.rs  executor.rs  mod.rs  prepare.rs  ssrp.rs  stream.rs  tls_prelogin_stream_wrapper.rs
sqlx-core/src/mssql/io/: buf_mut.rs
sqlx-core/src/mssql/options/: mod.rs  parse.rs
sqlx-core/src/mssql/protocol/: login.rs  packet.rs  pre_login.rs  row.rs  rpc.rs  type_info.rs
sqlx-core/src/mssql/types/: bigdecimal.rs  bytes.rs  chrono.rs  decimal.rs  decimal_tools.rs  float.rs  int.rs  json.rs  mod.rs  str.rs  uint.rs  uuid.rs
sqlx-core/src/mysql/: arguments.rs  column.rs  migrate.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type_info.rs  value.rs
sqlx-core/src/mysql/connection/: auth.rs  executor.rs  mod.rs  stream.rs  tls.rs
sqlx-core/src/mysql/io/: buf.rs  buf_mut.rs
sqlx-core/src/mysql/options/: mod.rs  parse.rs  ssl_mode.rs
sqlx-core/src/mysql/protocol/: auth.rs  packet.rs  row.rs
sqlx-core/src/mysql/protocol/connect/: handshake.rs  handshake_response.rs  ssl_request.rs
sqlx-core/src/mysql/protocol/response/: eof.rs  err.rs
sqlx-core/src/mysql/protocol/statement/: row.rs
sqlx-core/src/mysql/protocol/text/: row.rs
sqlx-core/src/mysql/testing/: mod.rs
sqlx-core/src/mysql/types/: chrono.rs  float.rs  int.rs  json.rs  time.rs
sqlx-core/src/net/: mod.rs  socket.rs
sqlx-core/src/net/tls/: mod.rs  rustls.rs
sqlx-core/src/odbc/: arguments.rs  blocking.rs  column.rs  database.rs  error.rs  mod.rs  query_result.rs  row.rs  statement.rs  transaction.rs  type.rs  type_info.rs  value.rs
sqlx-core/src/odbc/connection/: executor.rs  inner.rs  mod.rs  odbc_bridge.rs  worker.rs
sqlx-core/src/odbc/options/: mod.rs
sqlx-core/src/odbc/types/: bigdecimal.rs  bool.rs  bytes.rs  chrono.rs  decimal.rs  float.rs  int.rs  json.rs  mod.rs  str.rs  time.rs  uuid.rs
sqlx-core/src/pool/: connection.rs  executor.rs  inner.rs  mod.rs  options.rs
sqlx-core/src/postgres/: arguments.rs  column.rs  copy.rs  listener.rs  migrate.rs  row.rs  statement.rs  type_info.rs  value.rs
sqlx-core/src/postgres/connection/: describe.rs  establish.rs  executor.rs  mod.rs  sasl.rs  stream.rs  tls.rs
sqlx-core/src/postgres/io/: buf_mut.rs
sqlx-core/src/postgres/message/: authentication.rs  bind.rs  copy.rs  data_row.rs  mod.rs  parse.rs  password.rs  query.rs  response.rs  sasl.rs
sqlx-core/src/postgres/options/: mod.rs  parse.rs  pgpass.rs  ssl_mode.rs
sqlx-core/src/postgres/testing/: mod.rs
sqlx-core/src/postgres/types/: array.rs  bigdecimal.rs  bit_vec.rs  decimal.rs  float.rs  int.rs  interval.rs  ipnetwork.rs  lquery.rs  ltree.rs  mod.rs  numeric.rs  range.rs  record.rs  str.rs  time_tz.rs
sqlx-core/src/postgres/types/chrono/: date.rs  datetime.rs  time.rs
sqlx-core/src/postgres/types/time/: date.rs  datetime.rs  mod.rs  time_impl.rs
sqlx-core/src/snowflake/: arguments.rs  column.rs  connection.rs  database.rs  error.rs  migrate.rs  mod.rs  options.rs  query_result.rs  row.rs  statement.rs  testing.rs  transaction.rs  type_info.rs  value.rs
sqlx-core/src/snowflake/types/: bigdecimal.rs  bool.rs  bytes.rs  chrono.rs  decimal.rs  float.rs  int.rs  json.rs  mod.rs  str.rs  uint.rs  uuid.rs
sqlx-core/src/sqlite/: column.rs  migrate.rs  mod.rs  row.rs  value.rs
sqlx-core/src/sqlite/connection/: collation.rs  establish.rs  execute.rs  executor.rs  explain.rs  function.rs  mod.rs  worker.rs
sqlx-core/src/sqlite/options/: auto_vacuum.rs  journal_mode.rs  locking_mode.rs  mod.rs  synchronous.rs
sqlx-core/src/sqlite/statement/: handle.rs  mod.rs  unlock_notify.rs  virtual.rs
sqlx-core/src/sqlite/testing/: mod.rs
sqlx-core/src/sqlite/types/: chrono.rs  float.rs  json.rs  time.rs  uint.rs
sqlx-core/src/testing/: fixtures.rs
sqlx-macros/: Cargo.toml
sqlx-macros/src/: common.rs  lib.rs  migrate.rs  test_attr.rs
sqlx-rt/: Cargo.toml
sqlx-rt/src/: lib.rs  rt_async_std.rs  rt_tokio.rs  runtime.rs
sqlx-test/: Cargo.toml
sqlx-test/src/: lib.rs
src/: lib.rs
src/macros/: mod.rs  test.md
tests/: .dockerignore  README.md  docker-compose.yml  odbc.ini  x.py
tests/any/: any.rs  odbc.rs  pool.rs
tests/certs/: ca.srl  client.crt
tests/mssql/: configure-db.sh  macros.rs  mssql.rs  types.rs
tests/mysql/: describe.rs  mysql.rs  test-attr.rs  types.rs
(+40 files in other folders)
