[package]
name = "sqlx-bench"
version = "0.1.0"
authors = ["Austin Bonander <austin@launchbadge.com>"]
edition = "2021"
publish = false

[features]
native-tls = [
    "sqlx/native-tls",
    "sqlx-rt/native-tls",
]

rustls = [
    "sqlx/rustls",
    "sqlx-rt/rustls",
]

runtime-actix-native-tls = ["native-tls"]
runtime-tokio-native-tls = ["native-tls"]
runtime-actix-rustls = ["rustls"]
runtime-tokio-rustls = ["rustls"]

postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
criterion = "0.8"
dotenvy = "0.15.0"
once_cell = "1.4"
sqlx = { package = "sqlx-oldapi",  version = "0.6.55", path = "../", default-features = false, features = ["macros"] }
sqlx-rt = { package = "sqlx-rt-oldapi", version = "0.6.55", path = "../sqlx-rt", default-features = false }

chrono = "0.4.19"

[[bench]]
name = "pg_pool"
harness = false
required-features = ["postgres"]

[[bench]]
name = "sqlite_fetch_all"
harness = false
required-features = ["sqlite"]
