[package]
name = "sqlx-cli"
version = "0.6.55"
description = "Command-line utility for SQLx, the Rust SQL toolkit."
edition = "2021"
readme = "README.md"
homepage = "https://github.com/launchbadge/sqlx"
repository = "https://github.com/launchbadge/sqlx"
keywords = ["database", "postgres", "database-management", "migration"]
categories = ["database", "command-line-utilities"]
license = "MIT OR Apache-2.0"
default-run = "sqlx"
authors = [
    "Jesper Axelsson <jesperaxe@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
]
publish = false

[[bin]]
name = "sqlx"
path = "src/bin/sqlx.rs"

# enables invocation as `cargo sqlx`; required for `prepare` subcommand
[[bin]]
name = "cargo-sqlx"
path = "src/bin/cargo-sqlx.rs"

[dependencies]
dotenvy = "0.15.0"
tokio = { version = "1.15.0", features = ["macros", "rt", "rt-multi-thread", "time"] }
sqlx = { package = "sqlx-oldapi",  version = "0.6.55", path = "..", default-features = false, features = [
    "migrate",
    "any",
    "offline",
] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
anyhow = "1.0.52"
url = { version = "2.2.2", default-features = false }
async-trait = "0.1.52"
console = "0.16"
promptly = "0.3.0"
serde_json = "1.0.73"
serde = { version = "1.0.132", features = ["derive"] }
glob = "0.3.0"
openssl = { version = "0.10.38", optional = true }
cargo_metadata = "0.23"
filetime = "0.2"

[features]
default = ["postgres", "sqlite", "mysql", "native-tls"]
rustls = ["sqlx/rustls"]
native-tls = ["sqlx/native-tls"]
runtime-actix-rustls = ["rustls"]
runtime-tokio-rustls = ["rustls"]

# databases
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mssql = ["sqlx/mssql"]

# workaround for musl + openssl issues
openssl-vendored = ["openssl/vendored"]
