[package]
name = "sqlx-core-oldapi"
version = "0.6.55"
repository = "https://github.com/lovasoa/sqlx"
description = "Core of SQLx, the rust SQL toolkit. Not intended to be used directly."
license = "MIT OR Apache-2.0"
edition = "2021"
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>",
    "Daniel Akhterov <akhterovd@gmail.com>",
]

[package.metadata.docs.rs]
features = ["all-databases", "all-types", "offline", "native-tls"]

[features]
default = ["migrate"]
migrate = ["sha2", "crc"]

# databases
all-databases = ["postgres", "mysql", "sqlite", "mssql", "odbc", "any"]
postgres = [
    "md-5",
    "sha2",
    "base64",
    "sha1",
    "rand",
    "hmac",
    "futures-channel/sink",
    "futures-util/sink",
    "json",
    "dirs",
    "whoami",
    "hkdf"
]
mysql = [
    "sha1",
    "sha2",
    "num-bigint",
    "rand",
    "rsa",
]
sqlite = ["libsqlite3-sys", "futures-executor", "flume"]
mssql = ["uuid", "encoding_rs", "regex"]
any = []
odbc = ["odbc-api", "futures-executor", "flume"]

# types
all-types = [
    "chrono",
    "time",
    "bigdecimal",
    "decimal",
    "ipnetwork",
    "mac_address",
    "json",
    "uuid",
    "bit-vec",
]
bigdecimal = ["bigdecimal_", "num-bigint"]
decimal = ["rust_decimal", "num-bigint"]
json = ["serde", "serde_json"]

# TLS backends. Tokio is the supported async runtime.
native-tls = [
    "sqlx-rt/native-tls",
    "_tls-native-tls",
    "tokio-stream",
    "tokio-util",
]

rustls = [
    "sqlx-rt/rustls",
    "_tls-rustls",
    "tokio-stream",
    "tokio-util",
]

# Backward-compatible aliases for legacy runtime feature names.
runtime-actix-native-tls = ["native-tls"]
runtime-tokio-native-tls = ["native-tls"]
runtime-actix-rustls = ["rustls"]
runtime-tokio-rustls = ["rustls"]

_tls-native-tls = []
_tls-rustls = ["dep:rustls", "webpki-roots"]
aws_lc_rs = ["rustls?/aws_lc_rs", "sqlx-rt/aws_lc_rs"]
tls12 = ["rustls?/tls12"]

# support offline/decoupled building (enables serialization of `Describe`)
offline = ["serde", "either/serde"]

[dependencies]
ahash = "0.8.3"
atoi = "2.0.0"
sqlx-rt = { path = "../sqlx-rt", version = "0.6.55", package = "sqlx-rt-oldapi" }
base64 = { version = "0.22", default-features = false, optional = true, features = ["std"] }
bigdecimal_ = { version = "0.4.1", optional = true, package = "bigdecimal" }
rust_decimal = { version = "1.19.0", optional = true }
bit-vec = { version = "0.9", optional = true }
bitflags = { version = "2.3.3", default-features = false, features = ["serde"] }
bytes = "1.1.0"
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock"], optional = true }
crc = { version = "3", optional = true }
crossbeam-queue = "0.3.2"
dirs = { version = "6.0.0", optional = true }
encoding_rs = { version = "0.8.30", optional = true }
either = "1.6.1"
futures-channel = { version = "0.3.19", default-features = false, features = ["sink", "alloc", "std"] }
futures-core = { version = "0.3.19", default-features = false }
futures-intrusive = "0.5.0"
futures-util = { version = "0.3.19", default-features = false, features = ["alloc", "sink", "io"] }
# used by the SQLite worker thread to block on the async mutex that locks the database handle
futures-executor = { version = "0.3.19", optional = true }
flume = { version = "0.12.0", optional = true, default-features = false, features = ["async"] }
hex = "0.4.3"
hmac = { version = "0.13", default-features = false, optional = true }
itoa = "1.0.1"
ipnetwork = { version = "0.21", default-features = false, optional = true }
mac_address = { version = "1.1.2", default-features = false, optional = true }
libc = "0.2.112"
libsqlite3-sys = { version = "0", optional = true, default-features = false, features = [
    "pkg-config",
    "vcpkg",
    "bundled",
    "unlock_notify"
] }
log = { version = "0.4.14", default-features = false }
md-5 = { version = "0.11", default-features = false, optional = true }
memchr = { version = "2.4.1", default-features = false }
num-bigint = { version = "0.4.0", default-features = false, optional = true, features = ["std"] }
once_cell = "1.9.0"
percent-encoding = "2.1.0"
rand = { version = "0.10", default-features = false, optional = true, features = ["std", "std_rng", "thread_rng"] }
regex = { version = "1.5.5", optional = true }
rsa = { version = "0.9.2", optional = true, features = ["getrandom"] }
rustls = { version = "0.23", optional = true, default-features = false }
serde = { version = "1.0.132", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.73", features = ["raw_value"], optional = true }
sha1 = { version = "0.10.1", default-features = false, optional = true }
sha2 = { version = "0.11", default-features = false, optional = true }
thiserror = "2.0.3"
time = { version = "0.3.2", features = ["macros", "formatting", "parsing"], optional = true }
tokio-stream = { version = "0.1.8", features = ["fs"], optional = true }
tokio-util = { version = "0.7.0", features = ["compat"], default-features = false, optional = true }
smallvec = "1.7.0"
url = { version = "2.2.2", default-features = false }
uuid = { version = "1.0", default-features = false, optional = true, features = ["std"] }
webpki-roots = { version = "1.0.0", optional = true }
whoami = { version = "2.1.1", optional = true }
stringprep = "0.1.2"
bstr = { version = "1.6.0", default-features = false, features = ["std"], optional = true }
git2 = { version = "0.20.4", default-features = false, optional = true }
hashlink = "0.11.0"
# NOTE: *must* remain below 1.7.0 to allow users to avoid the `ahash` cyclic dependency problem by pinning the version
# https://github.com/tkaitchuck/aHash/issues/95#issuecomment-874150078
indexmap = "2.0.0"
hkdf = { version = "0.13", optional = true }
event-listener = "5.4.0"

dotenvy = "0.15"
odbc-api = { version = "25", optional = true }

[dev-dependencies]
sqlx = { package = "sqlx-oldapi", path = "..", features = ["postgres", "sqlite", "mysql", "rustls"] }
tokio = { version = "1", features = ["rt"] }
