[package]
name = "sqlx-rt-oldapi"
version = "0.6.55"
repository = "https://github.com/launchbadge/sqlx"
license = "MIT OR Apache-2.0"
description = "Runtime abstraction used by SQLx, the Rust SQL toolkit. Not intended to be used directly."
edition = "2021"
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
]

[features]
native-tls = ["_tls-native-tls", "dep:tokio-native-tls"]
rustls = ["_tls-rustls", "dep:tokio-rustls"]

# Backward-compatible aliases for legacy runtime feature names.
runtime-actix-native-tls = ["native-tls"]
runtime-tokio-native-tls = ["native-tls"]
runtime-actix-rustls = ["rustls"]
runtime-tokio-rustls = ["rustls"]
aws_lc_rs = ["tokio-rustls?/aws_lc_rs"]

# Not used directly and not re-exported from sqlx
_tls-native-tls = ["dep:native-tls"]
_tls-rustls = []

[dependencies]
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-rustls = { version = "0.26", optional = true, default-features = false }
native-tls = { version = "0.2.4", optional = true }
once_cell = { version = "1.4", features = ["std"] }

[dependencies.tokio]
version = "1.0.1"
features = ["fs", "net", "rt", "rt-multi-thread", "time", "io-util", "sync"]
