[package]
name = "sqlx-example-mysql-todos"
version = "0.1.0"
edition = "2021"
publish = false
workspace = "../../../"

[dependencies]
anyhow = "1.0"
futures = "0.3"
sqlx = { package = "sqlx-oldapi",  path = "../../../", features = [ "mysql", "native-tls" ] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.20.0", features = ["macros"]}
